test/NameLookup/multi-file-with-main.code
// RUN: %target-language-frontend -typecheck -enable-source-import -primary-file %s %S/Inputs/multi-file-with-main/main.code -module-name=MultiFile -sdk "" -verify

fn testOperator() {
  immutable x: Int = 1 +++ "abc" // expected-error@:22 {{cannot convert value of type 'String' to expected argument type 'Int'}}

  _ = x
}
